kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  selector:
    app: hello-world
  type: ClusterIP
  ports:
    - port: 80          # The port that the service will expose for HTTPS
      targetPort: 3000   # The port on the pod that the service will forward to
      protocol: TCP
